# infinite_jumper

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/aob/: any_example.hpp  unique_int_ptr_example.cpp
src/env/: env.cpp  env.h
src/game_object/: command.h  game_object.cpp  game_object.h  input_component.h  jump_command.cpp  jump_command.h  move_left_command.cpp  move_left_command.h  move_right_command.cpp  move_right_command.h  physics_component.h  quit_command.cpp  quit_command.h  sdl_input_component.cpp  sdl_input_component.h  standard_physics_component.cpp  standard_physics_component.h
src/math/: vec2.cpp  vec2.h
src/renderer/: renderer.cpp  renderer.h
src/utility/: timer.cpp  timer.h  types.h
